--- a/ca_setup.config
+++ b/ca_setup.config
@@ -1,3 +1,14 @@
 config backup
     option network_config 'save'
     option network_config 'restore'
+
+config ipoe
+    option wan_setup 'dhcp_auto'
+    option wan_setup 'pppoe_ipv4'
+    option wan_setup 'ipoe_v6plus'
+    option wan_setup 'ipoe_ocnvirtualconnect'
+    option wan_setup 'ipoe_ipv6option'
+    option wan_setup 'ipoe_transix'
+    option wan_setup 'ipoe_xpass'
+    option wan_setup 'ipoe_v6connect'
+    option wan_setup 'bridge_mode'
